--- a/index.html
+++ b/index.html
@@ -6,15 +6,68 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    
+    <script defer src="./script.js"></script>
+
     <title>Article preview component</title>
   </head>
   <body>
     <article>
+      <img 
+        src="./images/drawers.jpg"
+        alt="Drawer with some stuff on it"
+      />
+      <div>
+        <div>
+          <h1 class="text-preset-1-bold">
+            Shift the overall look and feel by adding these wonderful touches to furniture in your home
+          </h1>
+          <p class="text-preset-2">
+            Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. 
+            I’ve got some simple tips to help you make any room feel complete.
+          </p>
+        </div>
 
+        <div>
+          <img 
+            src="./images//avatar-michelle.jpg"
+            alt="Avatar image of Michelle Appleton"
+          />
+
+          <p class="text-preset-2-bold">
+            Michelle Appleton
+            <small class="text-preset-2">28 Jun 2020</small>
+          </p>
+
+          <div>
+            <button id="shareBtn">
+              <img 
+                src="./images/icon-share.svg"
+                alt="Share button icon"
+              />
+            </button>
+
+            <div id="hiddenContainer">
+              <div>
+                <p class="text-preset-3">SHARE</p>
+                <div>
+                  <img src="./images/icon-facebook.svg" alt="Share by Facebook" />
+                  <img src="./images/icon-twitter.svg" alt="Share by Twitter" />
+                  <img src="./images/icon-pinterest.svg" alt="Share by Pinterest" />
+                </div>
+              </div>
+              <button id="shareBtn" class="__internal">
+                <img 
+                  src="./images/icon-share.svg"
+                  alt="Share button icon"
+                />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </article>
   </body>
 </html>
