fix duplicated id

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </p>
 
           <div>
-            <button id="shareBtn">
+            <button id="shareBtnFirst" class="shareBtn">
               <img 
                 src="./images/icon-share.svg"
                 alt="Share button icon"
@@ -58,7 +58,7 @@
                   <img src="./images/icon-pinterest.svg" alt="Share by Pinterest" />
                 </div>
               </div>
-              <button id="shareBtn" class="__internal">
+              <button class="shareBtn __internal">
                 <img 
                   src="./images/icon-share.svg"
                   alt="Share button icon"
